Messed around with Navbar component. Need to fix logo not showing up properly in Navbar

--- a/src/styling/Login.css
+++ b/src/styling/Login.css
@@ -9,20 +9,19 @@
 
 .login__container {
     display: flex;
+    width: 300px;
+    height: 500px;
     flex-direction: column;
     text-align: center;
     background-color: #eae8e8;
     padding: 30px;
-    .logo{
-        color: #1006bd;
-        font-weight: bold;
-        font-size: 30px;
-
+    .img{
+        object-fit: contain;
     }
     .title{
-        color: #1006bd;
-        font-size: 16px; 
-        margin-bottom: 5px;
+        color: black;
+        font-size: 20px; 
+        margin-bottom: 10px;
     }
 }
 
